# ChangeLog for app-misc/lirc
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/lirc/ChangeLog,v 1.5 2003/09/08 21:59:38 mholzer Exp $

*lirc-0.6.6-r2 (09 Sep 2003)

  09 Sep 2003; Martin Holzer <mholzer@gentoo.org> lirc-0.6.6-r2.ebuild,
  files/lirc-0.6.6-r2-gentoo.diff.bz2:
  Adding 2003-08-01 patch from rivatv.sf.net for asus support

*lirc-0.6.6-r1 (27 Feb 2003)

  27 Feb 2003; Mark Guertin <gerk@gentoo.org> lirc-0.6.6-r1.ebuild :
  set ~ppc in keywords

*lirc-0.6.6 (04 Feb 2003)

  04 Feb 2003; Nick Hadaway <raker@gentoo.org> lirc-0.6.6.ebuild,
  files/digest-lirc-0.6.6, files/lirc-0.6.6-gentoo.diff.bz2 :
  Migrated previous patch's mknod and depmod related fixes.  Added to the
  patch removing references to a seemingly missing hw_udp.c.  Added
  an SMP workaround started on bug #13241.  Version bump.

*lirc-0.6.5 (11 Jul 2002)

  09 JuL 2002; Georg Sauthoff <g_sauthoff@web.de> lirc-0.6.5.ebuild, files/lircd,
  files/lirc-0.6.5-gentoo.diff: Initial ebuild.