@@ -1,11 +1,10 @@
-MD5 1769c08a9137c7b57a212c540f4c8cb2 ChangeLog 1049
-MD5 54f0aeec515402889839ad3c0eff8246 lirc-0.6.5.ebuild 3242
-MD5 5de0738bf50c20fb2e8e5c6e16f8c458 lirc-0.6.6-r1.ebuild 3869
 MD5 6a4ea5fd0affb4818ac58fc7afe12712 lirc-0.6.6-r2.ebuild 3771
-MD5 4b16494c8df335f7bd12a7221a67a1e5 files/digest-lirc-0.6.5 63
-MD5 eb1d5f40e0d59edbc1ac2a097cea5850 files/digest-lirc-0.6.6-r1 63
-MD5 6031968a1ddb51ff5265d1f22bd2d237 files/lirc-0.6.6-gentoo.diff.bz2 2215
-MD5 75e7e1656176c823db004656b3fbd787 files/lircd 375
-MD5 16ee4cd3d6b19367f57742df17f3d4b9 files/lirc-0.6.5-gentoo.diff.bz2 1593
-MD5 eb1d5f40e0d59edbc1ac2a097cea5850 files/digest-lirc-0.6.6-r2 63
+MD5 5de0738bf50c20fb2e8e5c6e16f8c458 lirc-0.6.6-r1.ebuild 3869
+MD5 ac55122f8c1922a0620e7a60bd68d4c0 lirc-0.7.0_pre2.ebuild 3759
+MD5 9ea403fc81feafe5326d26bb286901d1 ChangeLog 1345
 MD5 569e8244bbd5f7c76f4de38896482894 files/lirc-0.6.6-r2-gentoo.diff.bz2 67470
+MD5 eb1d5f40e0d59edbc1ac2a097cea5850 files/digest-lirc-0.6.6-r1 63
+MD5 eb1d5f40e0d59edbc1ac2a097cea5850 files/digest-lirc-0.6.6-r2 63
+MD5 75e7e1656176c823db004656b3fbd787 files/lircd 375
+MD5 cee0550f10a0a0d63fcae5209819f4d9 files/digest-lirc-0.7.0_pre2 67
+MD5 6031968a1ddb51ff5265d1f22bd2d237 files/lirc-0.6.6-gentoo.diff.bz2 2215
