@@ -1,1 +1,0 @@
-MD5 35f4ae0b38e96f92db36eb415855f220 lirc-0.6.5.tar.bz2 318552
