@@ -1,6 +1,17 @@
 # ChangeLog for app-misc/lirc
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/lirc/ChangeLog,v 1.5 2003/09/08 21:59:38 mholzer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/lirc/ChangeLog,v 1.6 2003/10/11 21:53:03 lanius Exp $
+
+*lirc-0.7.0_pre2 (11 Oct 2003)
+
+  11 Oct 2003; Heinrich Wendel <lanius@gentoo.org> lirc-0.6.5.ebuild,
+  lirc-0.7.0_pre2.ebuild, files/lirc-0.6.5-gentoo.diff.bz2:
+  cleanups
+
+*lirc-0.7.0_pre2 (11 Oct 2003)
+
+  11 Oct 2003; Heinrich Wendel <lanius@gentoo.org> lirc-0.7.0_pre2.ebuild:
+  version bump
 
 *lirc-0.6.6-r2 (09 Sep 2003)
 
